// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpenseList /> should render no items message if no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <p
      className="list-item--message"
    >
      Add an expense to get started
    </p>
  </div>
</div>
`;

exports[`<ExpenseList /> should render the list of expenses correctly 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      expense={
        Object {
          "amount": 50,
          "createdAt": 345600000,
          "description": "rent",
          "id": "1",
          "note": "",
        }
      }
      key="1"
    />
    <ExpenseListItem
      expense={
        Object {
          "amount": 40,
          "createdAt": 0,
          "description": "water bill",
          "id": "2",
          "note": "",
        }
      }
      key="2"
    />
    <ExpenseListItem
      expense={
        Object {
          "amount": 500,
          "createdAt": -345600000,
          "description": "gas bill",
          "id": "3",
          "note": "",
        }
      }
      key="3"
    />
  </div>
</div>
`;
